syntax="proto3";

package proto;

service Db {
    // 获取游戏服务器
    rpc GetHost(ReqHost) returns (RespHost) {}
}

message ReqHost {
    string hostName = 1;
}

message Host {
    int32 id = 1;
    string hostName = 2;
    string ip =3;
    string port =4;
}

message RespHost {
    int32 code = 1;
    string message =2;
    repeated Host host = 3;
}