syntax="proto3";

package proto;

service user {
    // 获取服务器列表
    rpc Host(ReqClientHost) returns (RespClientHost) {}
}

message ReqClientHost {
    string appVersion = 1;
    string appName = 2;
}
message ClientHost {
    int32 id = 1;
    string hostName = 2;
    string ip =3;
    string port =4;
}

message RespClientHost {
    int32 code = 1;
    string message =2;
    repeated ClientHost host = 3;
}